--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,9 @@ android {
 }
 
 dependencies {
+    compile(project(':react-native-firebase')) {
+        transitive = false
+    }
     compile project(':react-native-onesignal')
     compile project(':react-native-admob')
     compile project(':react-native-document-picker')
