--- a/package.json
+++ b/package.json
@@ -17,15 +17,12 @@
     "react-native-datepicker": "^1.6.0",
     "react-native-document-picker": "^2.1.0",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-firebase": "^3.2.4",
     "react-native-onesignal": "^3.0.9",
     "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.28",
-    "react-native-share": "^1.0.24",
     "react-native-star-rating": "^1.0.8",
     "react-native-youtube": "^1.1.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
     "url-search-params": "^0.10.0"
   },
   "devDependencies": {
