UI changes to Components

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,10 +151,7 @@ android {
 }
 
 dependencies {
-    compile(project(':react-native-firebase')) {
-        transitive = false
-    }
-    compile project(':react-native-onesignal')
+    compile project(':react-native-background-timer')
     compile project(':react-native-admob')
     compile project(':react-native-document-picker')
     compile project(':react-native-youtube')
