--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gifted-chat": "^0.3.0",
     "react-native-onesignal": "^3.0.9",
+    "react-native-photo-grid": "0.0.2",
     "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-socket.io-client": "^1.4.8",
