--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-document-picker": "^2.1.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gifted-chat": "^0.3.0",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-onesignal": "^3.0.9",
     "react-native-photo-grid": "0.0.2",
     "react-native-progress": "^3.4.0",
